--- a/AddressBookServices/AddressBookServices.csproj
+++ b/AddressBookServices/AddressBookServices.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AddressBookRepository\AddressBookRepository.csproj" />
   </ItemGroup>
 
